# marathongo

./: README.cn.md  README.en.md  README.md
glio_mapping/: CMakeLists.txt  README.md  package.xml
glio_mapping/app/: CMakeLists.txt  run_mapping_online.cpp
glio_mapping/cmake/: ceres.cmake  gdal.cmake  glog.cmake  gtsam.cmake  openssl.cmake  tbb.cmake
glio_mapping/config/: ouster64.yaml  robosense.yaml  suanli.yaml
glio_mapping/include/: common_lib.h  imu_processing.h  laser_mapping.h  module_base.h  preprocess.h  rotation.h  so3_math.h
glio_mapping/include/IKFoM_toolkit/esekfom/: esekfom.hpp
glio_mapping/include/ikd-Tree/: ikd_Tree.cpp
glio_mapping/launch/: gdb_debug_example.launch  mapping_avia.launch  mapping_horizon.launch  mapping_marsim.launch  mapping_mid360.launch  mapping_ouster64.launch  mapping_robosense.launch  mapping_suanli.launch  mapping_velodyne.launch
glio_mapping/rviz_cfg/: loam_livox.rviz
glio_mapping/src/: CMakeLists.txt  imu_processing.cpp  laser_mapping.cpp  preprocess.cpp
marathontracking/: .gitignore  README.md  marago.sh
marathontracking/pathes/: A000.path  A001.path  A002.path  A003.path  A004.path  A005.path  A006.path  A007.path  A008.path  A009.path  A010.path  A011.path  A012.path  A013.path  A014.path  A015.path  A016.path  A017.path  A018.path  A019.path
marathontracking/src/local_planner/: CMakeLists.txt  package.xml
marathontracking/src/local_planner/src/: local_planner_node.cpp
marathontracking/src/mpc_controller/: CMakeLists.txt.disable  package.xml.disable
marathontracking/src/mpc_controller/src/: mpc_controller_node.cpp
marathontracking/src/path_process/: CMakeLists.txt  package.xml
marathontracking/src/path_process/src/: path_process_node copy.cpp  path_process_node.cpp
marathontracking/src/python_ws/: create_venv.sh  cubic_path.py  cubic_path_circle.py  cubic_path_interact.py  cubic_path_parallel_lines.py  fuzzy_control_node.py  joy_node.py  pipmirror  requirement.txt  rl_control_node.py  test.py
marathontracking/src/python_ws/Joy/: __init__.py  abstract_joy.py  sbus.py  sbus_async.py
marathontracking/src/python_ws/RLFuzzyTracking/: __init__.py  ekf.py  fuzzy_tracking.py  fuzzy_tracking_stable.py  lowpass.py
marathontracking/src/python_ws/general_ppo/: ActorCriticModule.py  PPO.py  __init__.py
marathontracking/src/rl_controller/simple_ppo/: example1.py  example2.py  example2_boost.pth  example2_boost.py  example2_manual.py
marathontracking/src/robot_interface/: CMakeLists.txt  package.xml
marathontracking/src/robot_interface/src/: robot_interface_node.cpp
marathontracking/src/ros1_sender_general/: CMakeLists.txt  package.xml
marathontracking/src/ros1_sender_general/launch/: ros_bridge_sender.launch
marathontracking/src/ros1_sender_general/src/: server.cpp
marathontracking/src/sim_interface/: package.xml
marathontracking/src/sim_interface/src/: sim_interface_node.cpp
tangent_arc_navigation/: requirements.txt  run_all.sh  run_rslidar.sh  setup_workspace_env.sh
tangent_arc_navigation/src/: CMakeLists.txt  README.MD
tangent_arc_navigation/src/costmap_converter/: CMakeLists.txt  package.xml
tangent_arc_navigation/src/costmap_converter/launch/: laserscan_obstacle_converter.launch
tangent_arc_navigation/src/costmap_converter/src/: laserscan_obstacle_converter_node.cpp
tangent_arc_navigation/src/path_tools/: CMakeLists.txt  package.xml
tangent_arc_navigation/src/path_tools/launch/: fit_line_paths.launch  offset_paths.launch  record.launch
tangent_arc_navigation/src/path_tools/scripts/: fit_and_publish_line_paths.py  offset_paths_node.py  publish_path_from_csv.py  record_path_from_odom.py  record_twist_from_odom.py
tangent_arc_navigation/src/sim_interface/: CMakeLists.txt
tangent_arc_navigation/src/sim_interface/launch/: sim_navigation.launch
tangent_arc_navigation/src/sim_interface/rviz/: navigation.rviz
tangent_arc_navigation/src/speed_controller/: CMakeLists.txt  package.xml
tangent_arc_navigation/src/speed_controller/config/: speed_controller.yaml
tangent_arc_navigation/src/speed_controller/launch/: speed_controller.launch
tangent_arc_navigation/src/speed_controller/msg/: SpeedCommand.msg
tangent_arc_navigation/src/speed_controller/src/: speed_controller_continuous.cpp  speed_controller_discrete.cpp
tangent_arc_navigation/src/vo_navigation/: CMakeLists.txt  package.xml
tangent_arc_navigation/src/vo_navigation/config/: lidar_obstacle.yaml  subgoal_selector.yaml  vo_angular_limits.csv  vo_node.yaml
tangent_arc_navigation/src/vo_navigation/include/vo_navigation/: vo_state.h
tangent_arc_navigation/src/vo_navigation/launch/: vo_navigation.launch
tangent_arc_navigation/src/vo_navigation/msg/: Obstacle.msg  ObstacleArray.msg
tangent_arc_navigation/src/vo_navigation/src/: lidar_obstacle_node.cpp  subgoal_selector_node.cpp  vo_node.cpp
vision_part/: readme.txt
vision_part/dataset/: download.txt
vision_part/seg_fusion/: README.md  README_EN.md  demo_video.py  onnx_camera_inference.py  onnx_inference.py  train.py  video_prediction.py
vision_part/seg_fusion/ckpt/: download.txt
vision_part/seg_fusion/data_boost/: data_copypaste.py  data_zoomout.py
vision_part/seg_lightning/: README.md  test_pipeline.py  train.py
vision_part/seg_lightning/configs/: yolo11s_seg.yaml
vision_part/seg_lightning/data/: __init__.py  datamodule.py  dataset.py
vision_part/seg_lightning/loss/: __init__.py  seg_loss.py
vision_part/seg_lightning/model/: __init__.py  yolo_seg.py
vision_part/seg_lightning/trainer/: __init__.py  yolo_lightning.py
vision_part/seg_tensorrt/: .gitignore  README.md  benchmark_video.sh  infer_video.sh  robot_seg.yaml
vision_part/seg_tensorrt/configs/runtime/: image.yaml  (+1 more)
vision_part/seg_tensorrt/engines/: README.md
vision_part/seg_tensorrt/engines/cpp/fusion_v4l2_deepstream_app/: CMakeLists.txt  Dockerfile  README.md  build.sh  build_image.sh  main.cpp  run_container.sh
vision_part/seg_tensorrt/engines/cpp/fusion_v4l2_deepstream_app/src/: main.cpp
vision_part/seg_tensorrt/scripts/: build_engine.sh  capture_frames.sh  infer_image.sh
(+67 files in other folders)
